--- a/NuGet.Packager1/Package.nuspec
+++ b/NuGet.Packager1/Package.nuspec
@@ -2,17 +2,17 @@
 <package >
   <metadata>
     <id>CCrossHelper.Lib.Portable</id>
-    <version>1.0.1</version>
+    <version>1.0.2</version>
     <title>CCrossHelper</title>
     <authors>Philippe</authors>
     <owners></owners>
     <description>
-      Simplify your developments with this collection of helpers.
+      Simplify your developments with this collection of helpers and extensions methods.
     </description>
     <releaseNotes>
     </releaseNotes>
     <summary>
-      Simplify your developments with this collection of helpers.
+      Simplify your developments with this collection of helpers and extensions methods.
     </summary>
     <language>en-US</language>
     <!--<projectUrl>https://nuget.org/packages/NuGet.Packager1</projectUrl>-->
