+ Ajout d'un Helper permettant d'ouvrir à la volée une console. (utile pour appeler la console depuis une application Winforms ou WPF) + Ajout d'une class permettant de vérifier plus facilement les attributs d'un fichier

--- a/CCrossHelper.Lib/CCrossHelper.Lib.csproj
+++ b/CCrossHelper.Lib/CCrossHelper.Lib.csproj
@@ -39,6 +39,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Extensions\FileAttributesExtension.cs" />
+    <Compile Include="Helpers\ConsoleHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Types\MyString.cs" />
   </ItemGroup>
