--- a/CCrossHelper.Lib.Portable/CCrossHelper.Lib.Portable.csproj
+++ b/CCrossHelper.Lib.Portable/CCrossHelper.Lib.Portable.csproj
@@ -59,6 +59,7 @@
     <Compile Include="Patterns\Repository\IModel.cs" />
     <Compile Include="Patterns\Repository\IRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Tools\NumberAnalyzer.cs" />
     <Compile Include="Tools\SingletonBase.cs" />
     <Compile Include="Tools\Clock.cs" />
     <Compile Include="Tools\PasswordFactory.cs" />
