Add HashHelper and TimeZoneHelper

--- a/CCrossHelper.Lib.Phone/CCrossHelper.Lib.Phone.csproj
+++ b/CCrossHelper.Lib.Phone/CCrossHelper.Lib.Phone.csproj
@@ -99,6 +99,12 @@
     <Compile Include="Converters\StringToUpperConverter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\CCrossHelper.Lib.Portable\CCrossHelper.Lib.Portable.csproj">
+      <Project>{03011ae4-cf52-4e4d-8395-54c369b3488d}</Project>
+      <Name>CCrossHelper.Lib.Portable</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\$(TargetFrameworkIdentifier)\$(TargetFrameworkVersion)\Microsoft.$(TargetFrameworkIdentifier).$(TargetFrameworkVersion).Overrides.targets" />
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\$(TargetFrameworkIdentifier)\$(TargetFrameworkVersion)\Microsoft.$(TargetFrameworkIdentifier).CSharp.targets" />
   <ProjectExtensions />
