Shift method on Enumerable

--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
+  <repository path="..\CCrossHelper.Lib.Portable.Services\packages.config" />
   <repository path="..\CCrossHelper.Lib.Store\packages.config" />
   <repository path="..\CCrossHelper.Test.StoreWin\packages.config" />
   <repository path="..\CCrossHelper.Test.WpfApp\packages.config" />
