--- a/CCrossHelper.Lib.Portable/CCrossHelper.Lib.Portable.csproj
+++ b/CCrossHelper.Lib.Portable/CCrossHelper.Lib.Portable.csproj
@@ -44,6 +44,7 @@
     <Compile Include="Extensions\ConditionExtension.cs" />
     <Compile Include="Extensions\DateTimeExtension.cs" />
     <Compile Include="Extensions\EnumerableExtension.cs" />
+    <Compile Include="Extensions\GuidExtensions.cs" />
     <Compile Include="Extensions\ListExtension.cs" />
     <Compile Include="Extensions\NumberExtension.cs">
       <SubType>Code</SubType>
@@ -66,6 +67,7 @@
     <Compile Include="Tools\Keyword.cs" />
     <Compile Include="Tools\StaticRandom.cs" />
     <Compile Include="Tools\TimeSpanPicker.cs" />
+    <Compile Include="Types\ShortGuid.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
