--- a/CCrossHelper.Lib/CCrossHelper.Lib.csproj
+++ b/CCrossHelper.Lib/CCrossHelper.Lib.csproj
@@ -11,6 +11,7 @@
     <AssemblyName>CCrossHelper.Lib</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -41,9 +42,7 @@
   <ItemGroup>
     <Compile Include="Extensions\FileAttributesExtension.cs" />
     <Compile Include="Extensions\SecureStringExtension.cs" />
-    <Compile Include="Extensions\StringExtension.cs" />
     <Compile Include="Helpers\AssemblyHelper.cs" />
-    <Compile Include="Helpers\TimeZoneHelper.cs" />
     <Compile Include="Helpers\ConsoleHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Types\MyString.cs" />
